<resources>

    <string name="title_activity_settings">Настройки</string>


    <string name="app_name">Астрология</string>
    <string name="horoscope">Гороскоп</string>
    <string name="numerology">Нумерология</string>
    <string name="palmastry">Хиромантия</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <string name="username">Ваше имя</string>
    <string name="birthdate">Дата рождения</string>
    <string name="hour">Час</string>
    <string name="minute">Минута</string>
    <string name="sex">Пол</string>
    <string name="male">Мужчина</string>
    <string name="female">Женщина</string>
    <string name="relationship">Семейное положение</string>
    <string name="rs_single">Одинокий(ая)</string>
    <string name="rs_married">Женат/Замежем</string>
    <string name="rs_devorced">Разведен(а)</string>
    <string name="rs_relationship">В отношениях</string>

    <string name="save">Сохранить</string>
</resources>
