<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileActivity"
    android:background="@drawable/back"
    android:orientation="vertical"
    >

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        />


    <EditText
        android:id="@+id/birthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:hint="@string/birthdate"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/birthhour"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:hint="@string/hour"
            />

        <EditText
            android:id="@+id/birthminute"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:hint="@string/minute"
            />
    </LinearLayout>

    <Spinner
        android:id="@+id/zodiac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zodiac"/>

    <Spinner
        android:id="@+id/sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sex"/>

    <Spinner
        android:id="@+id/relationship"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/relationship"/>

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />


</LinearLayout>